--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ $(document).ready(function(){
     <div id="guard-dog">
       <div class="row">
         <div class="large-12 columns">
-          <h1>Guard Dog</h1>
-          <h3>Keeping the dangers of life in the dog house</h3>
+          <img src="images/header.jpg"></img>
         </div>
       </div>
     </div>
