image header without touching

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ $(document).ready(function(){
     <div id="guard-dog">
       <div class="row">
         <div class="large-12 columns">
-          <img src="images/header.png"></img>
+          <img src="images/header_white-blue-dark.png"></img>
         </div>
       </div>
     </div>
