dog button added with custom color for buttons

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@ $(document).ready(function(){
   <body>
     <div id="guard-dog">
       <div class="row">
-        <div class="large-12 columns">
+        <div class="large-12 large-centered text-center columns">
           <img src="images/header_white-blue-dark.png"></img>
+            <a href="#" class="button large dog-button">See the Chops</a>
         </div>
       </div>
     </div>
