Mission statement header

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ $(document).ready(function(){
     <div name="dog-info" id="dog-info">
       <div class="row">
         <div class="large-12 large-centered text-center"> 
-
+            <div class="mission-statement">
+              <h2 style="color: #193441; font-family:'hip'">Mission Statement</h2>
+            </div>
+          </div>
         </div>
       </div>
     </div>
