Mission statement images

--- a/index.html
+++ b/index.html
@@ -49,9 +49,19 @@ $(document).ready(function(){
       <div class="row">
         <div class="large-12 large-centered text-center"> 
             <div class="mission-statement">
-              <h2 style="color: #193441; font-family:'hip'">Mission Statement</h2>
+              <img src="images/mission_statement.png"></img>
             </div>
-          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-4 columns transport">
+          <img src="images/walking.png"></img>
+        </div>
+        <div class="large-4 columns transport">
+          <img src="images/biking.png"></img>
+        </div>
+        <div class="large-4 columns transport">
+          <img src="images/driving.png"></img>
         </div>
       </div>
     </div>
