--- a/index.html
+++ b/index.html
@@ -53,12 +53,30 @@ $(document).ready(function(){
             </div>
         </div>
       </div>
-    <div class="row">      
-        <div class="small-4 large-5 columns"><img src="images/walking.png"></img></div>
-        <div class="small-4 large-5 columns"><img src="images/biking.png"></img></div>
-        <div class="small-4 large-2 columns"><img src="images/driving.png"></img></div>
+    <div class="row">
+      <div class="small-6 large-13 columns"></div>
+      <div class="small-6 large-12 columns"><h4>Guard dog will keep you safe! It will alert your loved ones and the authories during life threating emergencies. With the power of machine learning, data anayltics, and a crack team of engineers it will never leave your side.</h4></div>
+      <div class="small-6 large-7 columns"></div>
     </div>
-    </div>    
+        <div class="large-12 large-centered text-center"> 
+            <div class="mission-statement">
+             <a href="#dog-data" data-target="dog-data" class="button large team-buttom scroll">Bark the numbers!</a>
+            </div>
+        </div>
+    <div class="row">      
+        <div class="small-4 large-5 columns"><img src="images/walking.png" styles="margin:-200px;"></img></div>
+        <div class="small-4 large-5 columns"><img src="images/biking.png" styles="margin:-200px;"></img></div>
+        <div class="small-4 large-2 columns"><img src="images/driving.png" styles="margin:-200px;"></img></div>
+    </div>
+    </div> 
+    <div id="dog-data">
+
+    </div>
+    <div id="dog-pack">
+    </div>
+    <div id="dog-footer">
+      
+    </div>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
