--- a/index.html
+++ b/index.html
@@ -70,12 +70,21 @@ $(document).ready(function(){
     </div>
     </div> 
     <div id="dog-data">
-
+      <div class="large-12 large-centered text-center">
+          <div class="impact-header">
+            <img src="images/"></img>
+          </div>
+      </div>
+      <div class="row">
+        <div class="small-4 large-5 columns"><img src="images/users.png" styles="margin:-200px;"></img></div>
+        <div class="small-4 large-5 columns"><img src="images/smartphone.png" styles="margin:-200px;"></img></div>
+        <div class="small-4 large-2 columns"><img src="images/alarm.png" styles="margin:-200px;"></img></div>
+      </div>
+    </div>
     </div>
     <div id="dog-pack">
     </div>
     <div id="dog-footer">
-      
     </div>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
