--- a/index.html
+++ b/index.html
@@ -76,9 +76,27 @@ $(document).ready(function(){
           </div>
       </div>
       <div class="row">
-        <div class="small-4 large-5 columns"><img src="images/users.png" styles="margin:-200px;"></img></div>
-        <div class="small-4 large-5 columns"><img src="images/smartphone.png" styles="margin:-200px;"></img></div>
-        <div class="small-4 large-2 columns"><img src="images/alarm.png" styles="margin:-200px;"></img></div>
+        <div class="small-4 large-5 columns users">
+          <img src="images/users.png" styles="margin:-200px;"></img>
+          <div class="users-nums">
+            <h1>420</h1>
+          </div>
+        </div>
+        <div class="small-4 large-5 columns smartphones">
+          <img src="images/smartphone.png" styles="margin:-200px;"></img>
+          <div class="smartphones-nums">
+            <h1>420</h1>
+          </div>
+        </div>
+        <div class="small-4 large-2 columns alarms">
+          <img src="images/alarm.png" styles="margin:-200px;"></img>
+          <div class="alarms-nums">
+            <h1>420</h1>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+
       </div>
     </div>
     </div>
