Impact descriptions added and improved

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $(document).ready(function(){
     <div id="dog-data">
       <div class="large-12 large-centered text-center">
           <div class="impact-header">
-            <img src="images/"></img>
+            <img src="images/impact.png"></img>
           </div>
       </div>
       <div class="row">
@@ -81,17 +81,26 @@ $(document).ready(function(){
           <div class="users-nums">
             <h1>420</h1>
           </div>
+          <div class="users-description">
+            <h4>Registered Users</h4>
+          </div>
         </div>
         <div class="small-4 large-5 columns smartphones">
           <img src="images/smartphone.png" styles="margin:-200px;"></img>
           <div class="smartphones-nums">
             <h1>420</h1>
           </div>
+          <div class="smartphones-description">
+            <h4>Incidents Reported</h4>
+          </div>
         </div>
         <div class="small-4 large-2 columns alarms">
           <img src="images/alarm.png" styles="margin:-200px;"></img>
           <div class="alarms-nums">
             <h1>420</h1>
+          </div>
+          <div class="alarms-description">
+            <h4>Lives Saved</h4>
           </div>
         </div>
       </div>
