ace in the hole added

--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@ $(document).ready(function(){
       </div>
     </div>
     <div id="dog-app">
-
+      <div class="large-12 large-centered text-center">
+        <div class="ace-in-the-hole">
+          <img src="images/ace_in_the_hole.png"></img>
+        </div>
+      </div>
     </div>
     <div id="dog-footer">
       <div class="row">      
