bio update for Steve,Thomas and Dan

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ $(document).ready(function(){
   $('#guard-dog').parallax("50%", 0.1);
   $('#dog-info').parallax("50%", 0.1);
   $('#dog-app').parallax("50%", 0.1);
-  $('#third').parallax("50%", 0.3);
 </script>
   </head>
   <body>
@@ -104,7 +103,7 @@ $(document).ready(function(){
           </div>
         </div>
       </div>
-      <div class="large-12 large-centered text-center"> 
+      <div class="large-12 large-centered text-center">
             <div class="pack-button">
              <a href="#dog-pack" data-target="dog-pack" class="button large team-buttom scroll">Check out the pack!</a>
             </div>
@@ -113,6 +112,34 @@ $(document).ready(function(){
     </div>
     <div id="dog-pack">
       <div class="large-12 large-centered text-center">
+          <div class="row">
+            <div class="small-4 large-4 columns steve">
+            <div class="steve-name">
+              <h4>Steve</h4>
+            </div>
+            <img src="images/steve.png" styles="margin:-200px;"></img>
+            <div class="steve-bio">
+              <h4>Swag Dawg Coder</h4>
+            </div>
+            </div>
+            <div class="small-4 large-4 columns thomas">
+            <div class="thomas-name">
+              <h4>Thomas</h4>
+            </div>
+            <img src="images/thomas.png" styles="margin:-200px;"></img>
+            <div class="thomas-bio">
+              <h4>Monster Fueled Web Developer</h4>
+            </div>
+            </div>
+            <div class="small-4 large-4 columns daniel">
+            <div class="dan-name">
+              <h4>Dan</h4>
+            </div>
+            <img src="images/dan.png" styles="margin:-200px;"></img></div>
+            <div class="dan-bio">
+              <h4>Ayy Lmao Backend Engineer</h4>
+            </div>
+          </div>
         <div class="footer-button">
              <a href="#dog-app" data-target="dog-app" class="button large team-buttom scroll">Finally Convinced?</a>
             </div>
