--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ $(document).ready(function(){
             </div>
             <img src="images/steve.png" styles="margin:-200px;"></img>
             <div class="steve-bio">
-              <h4>Swag Dawg Coder</h4>
+              <h5>Swag Dawg Coder</h5>
             </div>
             </div>
             <div class="small-4 large-4 columns thomas">
@@ -128,7 +128,7 @@ $(document).ready(function(){
             </div>
             <img src="images/thomas.png" styles="margin:-200px;"></img>
             <div class="thomas-bio">
-              <h4>Monster Fueled Web Developer</h4>
+              <h5>Monster Fueled Web Developer</h5>
             </div>
             </div>
             <div class="small-4 large-4 columns daniel">
@@ -137,9 +137,29 @@ $(document).ready(function(){
             </div>
             <img src="images/dan.png" styles="margin:-200px;"></img></div>
             <div class="dan-bio">
-              <h4>Ayy Lmao Backend Engineer</h4>
+              <h5>Ayy Lmao Backend Engineer</h5>
             </div>
           </div>
+        <div class="row">
+          <div class="small-4 large-4 columns nathan">
+            <div class="nathan-name">
+              <h4>Nathan</h4>
+            </div>
+            <img src="images/nathan.png" styles="margin: -200px;"></img>
+            <div class="nathan-bio">
+              <h5>Android Sorcerer</h5>
+            </div>
+          </div>
+          <div class="small-4 large-4 columns john">
+            <div class="john-name">
+              <h4>John</h4>
+            </div>
+            <img src="images/john.png"sytles="margin: -200px;"></img>
+            <div class="john-bio">
+              <h5>That Guy Who Knows AI</h5>
+            </div>
+          </div>
+        </div>
         <div class="footer-button">
              <a href="#dog-app" data-target="dog-app" class="button large team-buttom scroll">Finally Convinced?</a>
             </div>
