--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ $(document).ready(function(){
     </div>
     </div>
     <div id="dog-pack">
-      <div class="large-12 large-centered text-center">
+        <div class="large-12 large-centered text-center">
           <div class="row">
             <div class="small-4 large-4 columns steve">
             <div class="steve-name">
@@ -161,7 +161,7 @@ $(document).ready(function(){
           </div>
         </div>
         <div class="footer-button">
-             <a href="#dog-app" data-target="dog-app" class="button large team-buttom scroll">Finally Convinced?</a>
+             <a href="#dog-app" data-target="dog-app" class="button round team-buttom scroll">Finally Convinced?</a>
             </div>
         </div>
       </div>
@@ -182,7 +182,7 @@ $(document).ready(function(){
       </div>
       <div class="large-12 large-centered text-center">
         <div class="return-button">
-             <a href="#guard-dog" data-target="guard-dog" class="button large team-buttom scroll">Return to Top</a>
+             <a href="#guard-dog" data-target="guard-dog" class="button round team-buttom scroll">Return to Top</a>
             </div>
         </div>
       </div>
