--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@ $(document).ready(function(){
       <div class="small-6 large-12 columns"><h4>Guard dog will keep you safe! It will alert your loved ones and the authories during life threating emergencies. With the power of machine learning, data anayltics, and a crack team of engineers it will never leave your side.</h4></div>
       <div class="small-6 large-7 columns"></div>
     </div>
-        <div class="large-12 large-centered text-center"> 
-            <div class="mission-statement">
-             <a href="#dog-data" data-target="dog-data" class="button large team-buttom scroll">Bark the numbers!</a>
-            </div>
-        </div>
     <div class="row">      
         <div class="small-4 large-5 columns"><img src="images/walking.png" styles="margin:-200px;"></img></div>
         <div class="small-4 large-5 columns"><img src="images/biking.png" styles="margin:-200px;"></img></div>
         <div class="small-4 large-2 columns"><img src="images/driving.png" styles="margin:-200px;"></img></div>
     </div>
+    <div class="large-12 large-centered text-center"> 
+            <div class="mission-statement">
+             <a href="#dog-data" data-target="dog-data" class="button large data-buttom scroll">Bark the numbers!</a>
+            </div>
+        </div>
     </div> 
     <div id="dog-data">
       <div class="large-12 large-centered text-center">
@@ -111,6 +111,8 @@ $(document).ready(function(){
     </div>
     </div>
     <div id="dog-pack">
+        <div class="large-12 large-centerted text-center">
+        </div>
         <div class="large-12 large-centered text-center">
           <div class="row">
             <div class="small-4 large-4 columns steve">
@@ -160,6 +162,9 @@ $(document).ready(function(){
             </div>
           </div>
         </div>
+        <div class="TheSquad">
+            <img src="images/squad.png"></img>
+          </div>
         <div class="footer-button">
              <a href="#dog-app" data-target="dog-app" class="button round team-buttom scroll">Finally Convinced?</a>
             </div>
@@ -186,6 +191,10 @@ $(document).ready(function(){
             </div>
         </div>
       </div>
+      <div class="company-name large-12 large-centered text-center">
+        <h5>Bramble LLC</h5>
+      </div>
+    </div>
     </div>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
