--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ $(document).ready(function(){
         <div class="small-4 large-2 columns"><img src="images/twitter.png" styles="margin:-200px;"></img></div>
         <div class="small-4 large-2 columns"><img src="images/facebook.png" styles="margin:-200px;"></img></div>
         <div class="small-4 large-2 columns"><img src="images/youtube.png" styles="margin:-200px;"></img></div>
-        <div class="small-3 large-2 columns"><a href=""></a><img src="images/github.png" styles="margin:-200px;">
+        <div class="small-3 large-2 columns"><a href=""></a><img src="images/git.png" styles="margin:-200px;">
       </div>
       <div class="large-12 large-centered text-center">
         <div class="return-button">
