Link via github image in footer to repo and fix for temp numbers

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ $(document).ready(function(){
         <div class="small-4 large-5 columns users">
           <img src="images/users.png" styles="margin:-200px;"></img>
           <div class="users-nums">
-            <h1>103430</h1>
+            <h1>1033</h1>
           </div>
           <div class="users-description">
             <h4>Registered Users</h4>
@@ -87,7 +87,7 @@ $(document).ready(function(){
         <div class="small-4 large-5 columns smartphones">
           <img src="images/smartphone.png" styles="margin:-200px;"></img>
           <div class="smartphones-nums">
-            <h1>8021</h1>
+            <h1>621</h1>
           </div>
           <div class="smartphones-description">
             <h4>Incidents Reported</h4>
@@ -96,10 +96,10 @@ $(document).ready(function(){
         <div class="small-4 large-2 columns alarms">
           <img src="images/alarm.png" styles="margin:-200px;"></img>
           <div class="alarms-nums">
-            <h1>1032</h1>
+            <h1>132</h1>
           </div>
           <div class="alarms-description">
-            <h4>Lives Saved</h4>
+            <h4>Alerts Made</h4>
           </div>
         </div>
       </div>
@@ -183,7 +183,7 @@ $(document).ready(function(){
         <div class="small-4 large-2 columns"><img src="images/twitter.png" styles="margin:-200px;"></img></div>
         <div class="small-4 large-2 columns"><img src="images/facebook.png" styles="margin:-200px;"></img></div>
         <div class="small-4 large-2 columns"><img src="images/youtube.png" styles="margin:-200px;"></img></div>
-        <div class="small-3 large-2 columns"><a href=""></a><img src="images/git.png" styles="margin:-200px;">
+        <div class="small-3 large-2 columns"><a href="https://github.com/BrambleLLC/H4H_2015"><img src="images/git.png" styles="margin:-200px;"></a>
       </div>
       <div class="large-12 large-centered text-center">
         <div class="return-button">
