Changed naming of data section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ $(document).ready(function(){
             <h1>621</h1>
           </div>
           <div class="smartphones-description">
-            <h4>Incidents Reported</h4>
+            <h4>Damage Inquisitions</h4>
           </div>
         </div>
         <div class="small-4 large-2 columns alarms">
