--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
       </div>
     <div class="row">
       <div class="small-6 large-13 columns"></div>
-      <div class="small-6 large-12 columns"><h4>Guard dog will keep you safe! It will alert your loved ones and the authories during life threating emergencies. With the power of machine learning, data anayltics, and a crack team of engineers it will never leave your side.</h4></div>
+      <div class="small-6 large-12 columns"><h4>Guard dog will keep you safe! It will alert your loved ones and the authories during life threating emergencies. With the power of machine learning, data anayltics, and a crack team of engineers, just like man's best friend, it will never leave your side.</h4></div>
       <div class="small-6 large-7 columns"></div>
     </div>
     <div class="row">      
@@ -78,7 +78,7 @@ $(document).ready(function(){
         <div class="small-4 large-5 columns users">
           <img src="images/users.png" styles="margin:-200px;"></img>
           <div class="users-nums">
-            <h1>1033</h1>
+            <h1>933</h1>
           </div>
           <div class="users-description">
             <h4>Registered Users</h4>
@@ -182,7 +182,7 @@ $(document).ready(function(){
       <div class="row">      
         <div class="small-4 large-2 columns"><img src="images/twitter.png" styles="margin:-200px;"></img></div>
         <div class="small-4 large-2 columns"><img src="images/facebook.png" styles="margin:-200px;"></img></div>
-        <div class="small-4 large-2 columns"><img src="images/youtube.png" styles="margin:-200px;"></img></div>
+        <div class="small-4 large-2 columns"><a href="https://youtu.be/4EvMCp--VCU"><img src="images/youtube.png" styles="margin:-200px;"></img></div></a>
         <div class="small-3 large-2 columns"><a href="https://github.com/BrambleLLC/H4H_2015"><img src="images/git.png" styles="margin:-200px;"></a>
       </div>
       <div class="large-12 large-centered text-center">
