Fixed Thomas typos.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
       </div>
     <div class="row">
       <div class="small-6 large-13 columns"></div>
-      <div class="small-6 large-12 columns"><h4>Guard dog will keep you safe! It will alert your loved ones and the authories during life threating emergencies. With the power of machine learning, data anayltics, and a crack team of engineers it will never leave your side.</h4></div>
+      <div class="small-6 large-12 columns"><h4>Guard Dog will keep you safe! It will alert your loved ones and the authorities during life threatening emergencies. With the power of machine learning, data analytics, and a crack team of engineers it will never leave your side.</h4></div>
       <div class="small-6 large-7 columns"></div>
     </div>
     <div class="row">      
